--- a/index.html
+++ b/index.html
@@ -1,36 +1,5 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Sectioning Elements</title>
-    </head>
-    <body>
-        <header>
-            <h1>Cats, Cats, Cats: A Sectioned Website</h1>
-            <nav>
-                <a href="image.html">Wilma</a>
-            </nav>
-        </header>
-        <section>
-            <h2>Cats are the best!</h2>
-            <article>
-                <h3>On the Cute Nature of Cats</h3>
-                <p>Obviously our page will contain adorable content involving cats.</p>
-            </article>
-            <aside>
-                <h3>Why do we love cats?</h3>
-                <ul>
-                    <li>They are cute!</li>
-                    <li>They are sweet!</li>
-                    <li>They have soft fur!</li>
-                </ul>
-            </aside>
+    <meta element="utf-8">
 
-        </section>
-
-        <footer>
-            <p>This page was made in 2023 to celebrate my two adorable cats, Betty and Wilma.</p>
-        </footer>
-
-    </body>
 </html>
