Add assignment to git

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
     <meta element="utf-8">
-    <title></title>
+    <title>HTML and CSS Projects of the Past and Present</title>
 </html>
