Add assignment to GitHub

--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 <html lang="en">
     <meta element="utf-8">
     <title><u>HTML and CSS Projects of the Past and Present</u></title>
+    <head>
+        
+    </head>
 </html>
