Add assignment to GitHub

--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
         <meta element="utf-8">
         <title><u>HTML and CSS Projects of the Past and Present</u></title>
     </head>
+    <body>
+        <header>
+            <h1></h1>
+        </header>
+    </body>
 
 </html>
