Add assignment to GitHub

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta element="utf-8">
-        <title><u>HTML and CSS Projects of the Past and Present</u></title>
+        <title><p><u>HTML and CSS Projects of the Past and Present</u></p></title>
     </head>
     <body>
+        <figure>
+            <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage."
+        </figure>
         <header>
             <h1></h1>
         </header>
