Add assignment to GitHub

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta element="utf-8">
-        <title><p><u>HTML and CSS Projects of the Past and Present</u></p></title>
+        <title>HTML and CSS Projects of the Past and Present</title>
     </head>
     <body>
-        <figure>
-            <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage."
-        </figure>
         <header>
-            <h1></h1>
+            <h1>The Sectioned Cat Webpage</h1>
         </header>
+        <figure>
+            <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
+        </figure>
+        <p></p>
     </body>
 
 </html>
