Add assignment to GitHub

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta element="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
+        <p><u>HTML and CSS Projects of the Past and Present</u></p>
     </head>
     <body>
         <header>
@@ -11,7 +12,7 @@
         <figure>
             <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
         </figure>
-        <p></p>
+        <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
     </body>
 
 </html>
