--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </header>
         <figure>
             <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
+            <figcaption>My cat webpage</figcaption>
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
     </body>
