--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
             <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
             <figcaption>My cat webpage</figcaption>
         </figure>
+        <section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
+            </section>
     </body>
-
+    <footer>
+        <p>Assignment for HTML5100</p>
+    </footer>
 </html>
