--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
         </figure>
         <section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
-            </section>
+        <nav 
+            <a href="image.html">Wilma</a>
+        </nav>
+        </section>
     </body>
     <footer>
         <p>Assignment for HTML5100</p>
