--- a/image.html
+++ b/image.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
-    <img src="wilma_firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
+    <img src="wilma-firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
 </html>
