--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav 
-            <a href="image.html">Wilma</a>
+            <a href="image.html">Wilma</a> |
         </nav>
         </section>
     </body>
