--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta element="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
-        <p><u>HTML and CSS Projects of the Past and Present</u></p>
-        </head>
+    </head>
+
     <body>
         <header>
             <h1>The Sectioned Cat Webpage</h1>
@@ -16,10 +17,11 @@
         <section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav 
-            <a href="image.html">Wilma</a> |
+            <a href="image.html">Wilma</a>
         </nav>
         </section>
     </body>
+    
     <footer>
         <p>Assignment for HTML5100</p>
     </footer>
