--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <meta element="utf-8">
+        <meta charset="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
     </head>
 
@@ -21,7 +21,7 @@
         </nav>
         </section>
     </body>
-    
+
     <footer>
         <p>Assignment for HTML5100</p>
     </footer>
