--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
         </figure>
         <section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
-        <nav 
+        <nav> 
             <a href="image.html">Wilma</a>
         </nav>
         </section>
+        <section>
+            <h1>Future Project: Screenwriting Page</h1>
+        <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, script and </p>
+        </section>
     </body>
-
     <footer>
         <p>Assignment for HTML5100</p>
     </footer>
