--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
         <section>
             <h1>Future Project: Screenwriting Page</h1>
-        <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, script and </p>
+        <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         </section>
     </body>
     <footer>
