--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
         <meta charset="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
+        <p><u>HTML and CSS Projects of the Past and Present</u></p>
     </head>
-
     <body>
         <header>
             <h1>The Sectioned Cat Webpage</h1>
