--- a/image.html
+++ b/image.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
     <img src="wilma-firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
+    <p>My girl Wilma at the height of kitty fashion.</p>
 </html>
