--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav> 
-            <a href="image.html">Wilma</a>
+            <a href="image.html" target="_blank">Wilma</a>
         </nav>
         <section>
             <h2>Future Project: Screenwriting Page</h2>
@@ -28,5 +28,5 @@
     <footer>
         <p>Assignment for HTML5100</p>
     </footer>
-    
+
 </html>
