--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <section>
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
-        <img src="IMDB_Logo_2016.svg.png" alt="IMDb logo.">
+        <figure>
+            <img src="IMDB_Logo_2016.svg.png" alt="IMDb logo.">
+            <figcaption>IMDb Logo</figcaption>
+        </figure>
         <nav>
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
         </nav>
