--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <header>
-            <h1>The Sectioned Cat Webpage</h1>
+            <h1>My Past and Future Assignments:</h1>
         </header>
+        <p>The Sectioned Cat Webpage</p>
         <figure>
             <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
             <figcaption>My cat webpage</figcaption>
