--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <header>
-            <h1>My Past and Future Assignments:</h1>
+            <h1>My Past and Future Webpages:</h1>
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
