--- a/image.html
+++ b/image.html
@@ -2,4 +2,7 @@
 <html lang="en">
     <img src="wilma-firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
     <p>My girl Wilma at the height of kitty fashion.</p>
+    <footer>
+        <p>Photo courtesy of me, WIlma's owner.</p>
+    </footer>
 </html>
