--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
             <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
             <figcaption>My cat webpage</figcaption>
         </figure>
+        <article>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav> 
             <a href="image.html" target="_blank">Wilma</a>
         </nav>
+        </article>
         <section>
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
