--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <img src="webpage-sample-1.JPG" alt="Screenshot of sample webpage.">
+            <img src="webpage-sample-1.jpg" alt="Screenshot of sample webpage.">
             <figcaption>My cat webpage</figcaption>
         </figure>
         <article>
