--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="image.html" target="_blank">Wilma</a>
         </nav>
         </article>
-        <section>
+        <article>
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
@@ -29,7 +29,7 @@
         <nav>
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
         </nav>
-        </section>
+        </article>
         <footer>
             <p>Assignment for HTML5100</p>
         </footer>
