--- a/image.html
+++ b/image.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <body>
+    <article>
     <img src="wilma-firstlion.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
     <p>My girl Wilma at the height of kitty fashion.</p>
     <footer>
         <p>Photo courtesy of me, WIlma's owner.</p>
     </footer>
+    </article>
+    </body>
 </html>
