--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
-            <img src="IMDB_Logo_2016.svg.png" alt="IMDb logo.">
+            <img src="IMDB-Logo-2016.svg.png" alt="IMDb logo.">
             <figcaption>IMDb Logo</figcaption>
         </figure>
         <nav>
