--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <img src="webpage-sample-1.jpg" alt="Screenshot of sample webpage." height="555" width="403">
+            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403">
             <figcaption>My cat webpage</figcaption>
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
@@ -23,7 +23,7 @@
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
-            <img src="IMDB-Logo-2016.svg.png" alt="IMDb logo." height="640" width="323">
+            <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323">
             <figcaption>IMDb Logo</figcaption>
         </figure>
         <nav>
