--- a/image.html
+++ b/image.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <title>My Wilma</title>
+    </head>
     <body>
     <article>
-    <img src="wilma-firstlion.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
+        <h1>My Cat Wilma with a Lioncut</h1>
+    <img src="images/wilma-firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
     <p>My girl Wilma at the height of kitty fashion.</p>
     <footer>
         <p>Photo courtesy of me, Wilma's owner.</p>
