--- a/image.html
+++ b/image.html
@@ -6,7 +6,9 @@
     </head>
     <body>
     <article>
+        <header>
         <h1>My Cat Wilma with a Lioncut</h1>
+    </header>
     <img src="images/wilma-firstlion1.jpg" width="480" height="270" alt="My cat Wilma with a lioncut.">
     <p>My girl Wilma at the height of kitty fashion.</p>
     <footer>
