--- a/image.html
+++ b/image.html
@@ -13,6 +13,9 @@
     <p>My girl Wilma at the height of kitty fashion.</p>
     <footer>
         <p>Photo courtesy of me, Wilma's owner.</p>
+        <nav> 
+            <a href="index.html" target="_blank">Return to home page</a>
+        </nav>
     </footer>
     </article>
     </body>
