--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
+        <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
         <article>
