--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403">
+            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
             <figcaption>My cat webpage</figcaption>
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
-        <nav> 
+        <nav>
             <a href="image.html" target="_blank">Wilma</a>
         </nav>
         </article>
@@ -24,7 +24,7 @@
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
-            <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323">
+            <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323" class="img">
             <figcaption>IMDb Logo</figcaption>
         </figure>
         <nav>
