--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
         </nav>
         </article>
+        <article>
+            <h3>Websites for Others</h3>
+        <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
+        <figure>
+            <img src="images/portfolio.jpg" alt="Stock portfolio picture"
+        </figure>
+        </article>
         <footer>
             <p>Assignment for HTML5100</p>
         </footer>
