--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
+            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img1">
             <figcaption>My cat webpage</figcaption>
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
@@ -35,7 +35,7 @@
             <h3>Websites for Others</h3>
         <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
         <figure>
-            <img src="images/portfolio.jpg" alt="Stock portfolio picture"
+            <img src="images/portfolio.jpg" alt="Stock portfolio picture" width="600" height="400" class=img>
         </figure>
         </article>
         <footer>
