--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img1">
+            <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
             <figcaption>My cat webpage</figcaption>
         </figure>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
