--- a/index.html
+++ b/index.html
@@ -6,26 +6,44 @@
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
     <body>
+        <style>
+            @import url(https://fonts.google.com/specimen/Alkatra);
+
+            header > h1{
+                font-family: Serif, Alkatra;
+            }
+
+        </style>
         <article>
         <header>
             <h1>My Past and Future Webpages:</h1>
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
+            <section class="container">
             <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
             <figcaption>My cat webpage</figcaption>
         </figure>
+        </section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav>
+            <section class="container">
+            <div class="box">
             <a href="image.html" target="_blank">Wilma</a>
+            </div>
+            </section>
         </nav>
         </article>
         <article>
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
+            <section class="container">
+            <div class="box">
             <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323" class="img">
             <figcaption>IMDb Logo</figcaption>
+            </div>
+            </section>
         </figure>
         <nav>
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
@@ -35,7 +53,11 @@
             <h3>Websites for Others</h3>
         <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
         <figure>
+            <section class="container">
+            <div class="box">
             <img src="images/portfolio.jpg" alt="Stock portfolio picture" width="600" height="400" class=img>
+            </div>
+            </section>
         </figure>
         </article>
         <footer>
