--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>HTML and CSS Projects of the Past and Present</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
+        <script src="https://kit.fontawesome.com/e80656cf4a.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <style>
