--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     </head>
     <body>
         <style>
-            @import url(https://fonts.google.com/specimen/Alkatra);
+            @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
 
-            header > h1{
-                font-family: Serif, Alkatra;
+            header > h1, h2, h3 {
+                font-family: 'Alkatra', cursive;
             }
-
+            main > p {
+                font-family: sans-serif;
+            }
         </style>
         <article>
         <header>
@@ -51,7 +53,7 @@
         </nav>
         </article>
         <article>
-            <h3>Websites for Others</h3>
+            <h3>Websites for Others:</h3>
         <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
         <figure>
             <section class="container">
