--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
         <title>HTML and CSS Projects of the Past and Present</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css">
         <script src="https://kit.fontawesome.com/e80656cf4a.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Alkatra&display=swap');
-
+    
             header > h1, h2, h3 {
                 font-family: 'Alkatra', cursive;
             }
@@ -17,36 +15,36 @@
                 font-family: sans-serif;
             }
         </style>
+    </head>
+    <body>
         <article>
         <header>
             <h1>My Past and Future Webpages:</h1>
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <section class="container">
+            <div class="container">
             <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
+            </div>
             <figcaption>My cat webpage</figcaption>
         </figure>
-        </section>
         <p>This webpage was designed to learn and demonstrate an understanding of sectioned elements in a webpage. I decided to dedicate the page to my cats, Betty and Wilma.</p>
         <nav>
-            <section class="container">
+            <div class="container"></div>
             <div class="box">
             <a href="image.html" target="_blank">Wilma</a>
             </div>
-            </section>
         </nav>
         </article>
         <article>
             <h2>Future Project: Screenwriting Page</h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
-            <section class="container">
+            <div class="container"></div>
             <div class="box">
             <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323" class="img">
-            <figcaption>IMDb Logo</figcaption>
             </div>
-            </section>
+            <figcaption>IMDb Logo</figcaption>
         </figure>
         <nav>
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
@@ -56,15 +54,14 @@
             <h3>Websites for Others:</h3>
         <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
         <figure>
-            <section class="container">
+            <div class="container"></div>
             <div class="box">
             <img src="images/portfolio.jpg" alt="Stock portfolio picture" width="600" height="400" class=img>
             </div>
-            </section>
         </figure>
         </article>
         <footer>
-            <p>Assignment for HTML5100</p>
+            <p><i class="fa-solid fa-copyright"></i>Assignment for HTML5100</p>
         </footer>
     </body>
 </html>
