--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </nav>
         </article>
         <article>
-            <h2>Future Project: Screenwriting Page</h2>
+            <h2>Future Project: Screenwriting Page <i class="fa-sharp fa-solid fa-film"></i></h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
             <div class="container"></div>
@@ -61,7 +61,7 @@
         </figure>
         </article>
         <footer>
-            <p><i class="fa-solid fa-copyright"></i>Assignment for HTML5100</p>
+            <p><i class="fa-solid fa-copyright fa-lg"></i>Assignment for HTML5100</p>
         </footer>
     </body>
 </html>
