--- a/contact.html
+++ b/contact.html
@@ -3,3 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Contact Form</title>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    </head>
+    <body>
+        <article>
+            <h1>Contact Form</h1>
+        </article>
+        <article>
+            <label>Contact Me Here:
+                <textarea name="contactQuery" rows="20" cols="50"></textarea>
+            </label>
+            <nav> 
+                <a href="index.html" target="_blank">Return to home page</a>
+            </nav>
+        </article>
+    </body>
