--- a/image.html
+++ b/image.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Wilma</title>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css">
     </head>
     <body>
     <article>
