--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
             <h1>Contact Form</h1>
         </article>
         <article>
-            <label>Contact Me Here:
+            <label class="">Contact Me Here:
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
             </label>
             <p></p>
