--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
             </label>
             <p></p>
-            <nav> 
+            <nav class="button"> 
                 <a href="index.html" target="_blank">Return to home page</a>
             </nav>
         </article>
