--- a/image.html
+++ b/image.html
@@ -14,7 +14,7 @@
     <p>My girl Wilma at the height of kitty fashion.</p>
     <footer>
         <p>Photo courtesy of me, Wilma's owner.</p>
-        <nav> 
+        <nav class="button"> 
             <a href="index.html" target="_blank">Return to home page</a>
         </nav>
     </footer>
