--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
             </div>
         </figure>
         </article>
+        <nav>
+            <div class="container"></div>
+            <a href="contact.html" target="_blank">Contact Me</a>
+        </nav>
         <footer>
             <p><i class="fa-solid fa-copyright fa-lg"></i>Assignment for HTML5100</p>
         </footer>
