--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,26 @@
     <body>
         <article>
             <h1>Contact Form</h1>
+            <div class="container">
+            <form method="GET">
+                <label>Name:
+                <input type="text" name="contactName">
+                </label>
+                <input type="submit" value="Submit">
+                <label>Contact Email:
+                    <input type="text" name="contactEmail">
+                    </label>
+                    <input type="submit" value="Submit">
+            </form>
+            </div>
         </article>
         <article>
-            <label class="">Contact Me Here:
+            <div class="container">
+            <label class="">Reason for Contact:
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
             </label>
-            <p></p>
+            <input type="submit" value="Submit">
+            </div>
             <nav class="button"> 
                 <a href="index.html" target="_blank">Return to home page</a>
             </nav>
