--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,16 @@
             <div class="container">
             <form method="GET">
                 <label>Name:
-                <input type="text" name="contactName">
+                    <input type="text" name="contactName">
                 </label>
-                <input type="submit" value="Submit">
+                    <input type="submit" value="Submit">
                 <label>Contact Email:
                     <input type="text" name="contactEmail">
-                    </label>
+                </label>
+                    <input type="submit" value="Submit">
+                <label>Time Frame for Job if Applicable:
+                    <input type="text" name="contactTime">
+                </label>
                     <input type="submit" value="Submit">
             </form>
             </div>
