--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,6 @@
             </form>
             </div>
         </article>
-        <article>
             <div class="container">
             <label class="">Reason for Contact:
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
@@ -35,5 +34,5 @@
             <nav class="button"> 
                 <a href="index.html" target="_blank">Return to home page</a>
             </nav>
-        </article>
     </body>
+</html>
