--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,17 @@
             <h1>Contact Form</h1>
             <div class="container">
             <form method="GET">
-                <label>Name:
+                <label>Name:</label>
                     <input type="text" name="contactName">
-                </label>
-                    <input type="submit" value="Submit">
-                <label>Contact Email:
+                <label>Contact Email:</label>
                     <input type="text" name="contactEmail">
-                </label>
-                    <input type="submit" value="Submit">
-                <label>Time Frame for Job if Applicable:
+                <label>Time Frame for Job if Applicable:</label>
                     <input type="text" name="contactTime">
-                </label>
-                    <input type="submit" value="Submit">
+                <label>Job Type:</label>
+                    <input type="radio" name="" value="Screenwriting">
+                    <label class="label2" for="screenwriting">Screenwriting</label>
+                    <input type="radio" name="" value="Web Design">
+                    <label class="label2" for="webdesign">Web Design</label>
             </form>
             </div>
         </article>
