--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,10 @@
             </form>
             </div>
         </article>
-            <div class="container">
-            <label class="">Reason for Contact:
+            <label class="formlabel">If not either option, describe your reason for contact below:
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
             </label>
             <input type="submit" value="Submit">
-            </div>
             <nav class="button"> 
                 <a href="index.html" target="_blank">Return to home page</a>
             </nav>
