--- a/contact.html
+++ b/contact.html
@@ -19,11 +19,11 @@
                 <label class="formlabel">Job Type:</label>
                     
                     <label class="radiolabel" for="screenwriting">
-                        <input type="radio" name="" value="Screenwriting">
+                        <input type="radio" name="worktype" value="Screenwriting">
                         Screenwriting</label>
                     
                     <label class="radiolabel" for="webdesign">
-                        <input type="radio" name="" value="Web Design">
+                        <input type="radio" name="worktype" value="Web Design">
                         Web Design</label>
             </form>
             </div>
