--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
             </form>
             </div>
         </article>
-            <label class="formlabel">If not either option, describe your reason for contact below:
+            <label class="formlabel">If neither option, describe your reason for contact below:
                 <textarea name="contactQuery" rows="20" cols="50"></textarea>
             </label>
             <input type="submit" value="Submit">
