--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <div class="container">
+            <div class="container"></div>
+            <div class="box">
             <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
             </div>
             <figcaption>My cat webpage</figcaption>
