--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         </header>
         <p>The Sectioned Cat Webpage</p>
         <figure>
-            <div class="container"></div>
-            <div class="box">
+            <div class="container">
             <img src="images/webpage-sample-1.JPG" alt="Screenshot of sample webpage." width="555" height="403" class="img">
             </div>
             <figcaption>My cat webpage</figcaption>
@@ -41,29 +40,30 @@
             <h2>Future Project: Screenwriting Page <i class="fa-sharp fa-solid fa-film"></i></h2>
         <p>One project I want to partake in when I've completed the certificate is to design my own webpage for my screenwriting career. I would showcase accolades, genres, scripts and contact information.</p>
         <figure>
-            <div class="container"></div>
-            <div class="box">
+            <div class="container">
             <img src="images/IMDB-Logo-2016.svg.png" alt="IMDb logo." width="640" height="323" class="img">
             </div>
             <figcaption>IMDb Logo</figcaption>
         </figure>
         <nav>
+            <div class="container">
             <a href="https://m.imdb.com/name/nm6966087/?ref_=fn_al_nm_2" target="_blank">My IMDb page</a>
+            </div>
         </nav>
         </article>
         <article>
             <h3>Websites for Others:</h3>
         <p>To build my portfolio, I will build websites for others in the hope of earning employment at a company with my new and expanding portfolio.</p>
         <figure>
-            <div class="container"></div>
-            <div class="box">
+            <div class="container">
             <img src="images/portfolio.jpg" alt="Stock portfolio picture" width="600" height="400" class=img>
             </div>
         </figure>
         </article>
         <nav>
-            <div class="container"></div>
+            <div class="container">
             <a href="contact.html" target="_blank">Contact Me</a>
+        </div>
         </nav>
         <footer>
             <p><i class="fa-solid fa-copyright fa-lg"></i>Assignment for HTML5100</p>
